# pool-allocator

./: .gitattributes  .gitignore  CMakeLists.txt  Pool.cpp  Pool.hpp  PoolAllocator.cpp  PoolAllocator.hpp  README.md  Slab.cpp  Slab.hpp  main.cpp
docs/: slab_pool_overview.txt
tests/: test_pool.cpp
